# Curso-em-Video-Python

./: README.md  ex006.py  ex007.py  ex010.py  ex014.py  ex016.py  ex017.py  ex020.py
(01 - 21) Iniciais/: ex003.py  ex011.py  ex015.py
(22 - 27) String/: ex027.py
(28 - 35) Condições/: ex031.py  ex032.py
(36 - 45) Condições Alinhadas/: ex036.py  ex038.py  ex040.py  ex041.py  ex042.py  ex043.py  ex044.py
(46 - 56) For/: ex048.py  ex050.py  ex052.py  ex056.py
(57 - 65) While/: ex057.py  ex058.py  ex060.py  ex061.py  ex062.py  ex063.py  ex064.py  ex065.py  ex066.py  ex068.py  ex070.py
(72 - 77) Tuplas/: ex076.py  ex077.py
(78 - 89) Listas/: ex080.py  ex081.py  ex082.py  ex083.py  ex084.py  ex085.py
(90 - 95) Dicionários/: ex092.py  ex094.py
(96 - 106) Funções/: ex096.py  ex102.py  ex103.py  ex106.py
Condições (28 - 35)/: ex028.py  ex029.py  ex034.py
Iniciais (01 - 21)/: ex004.py  ex005.py  ex012.py
String (22 - 27)/: ex022.py
[01 - 21] Iniciais/: ex008.py  ex013.py  ex019.py
[113 - 115] Excecoes/: ex113.py  ex114.py
[113 - 115] Excecoes/ex115/: Makefile  main.py  pyproject.toml
[113 - 115] Excecoes/ex115/dados/: dados.txt
[113 - 115] Excecoes/ex115/lib/Interface/: __init__.py
[113 - 115] Excecoes/ex115/lib/parser/: __init__.py
[22 - 27] String/: ex026.py
[28 - 35] Condições/: ex033.py
[36 - 45] Condições Alinhadas/: ex037.py  ex039.py  ex045.py
[46 - 56] For/: ex046.py  ex047.py  ex049.py  ex051.py  ex053.py  ex054.py  ex055.py
[57 - 65] While/: ex059.py  ex067.py  ex069.py  ex071.py
[72 - 77] Tuplas/: ex072.py  ex073.py  (+2 more)
(+46 files in other folders)
