[tool.poetry]
name = "projetofinalcev"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto de Portilho Ronzani <pedroaugustogabironzani@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

